fix: Fix YAML formatting in cco.do.mdx policies field

--- a/roles/cco.do.mdx
+++ b/roles/cco.do.mdx
@@ -10,8 +10,7 @@ hero:
       const cco = new CCO({
         customers: 'all-accounts',
         integrations: ['intercom', 'zendesk', 'gainsight', 'stripe'],
-        policies:
- {
+        policies: {
           healthScoring: 'continuous-ml',
           churnPrevention: 'proactive-intervention',
           onboarding: 'personalized-journey',
